{{$NEXT}}

1.302017  2015-10-15 21:32:50-07:00 America/Los_Angeles

    - Change minimum module versions (they were wrong)
    - Typo fixes in Test::Stream docs
    - Remove unused variable
    - Fix Compare line number bug

1.302016  2015-10-12 18:49:35-07:00 America/Los_Angeles

    - Workflows/Spec: Argument tolerence, custom line numbers
    - Remove Block.pm
    - Add sub_info and sub_name to Util.pm
    - Workflows: Set sub name if possible (better debugging)
    - Add "Test" that prints deps and versions
    - Add 'class', 'skip_without', and 'srand' to Test::Stream as options
    - Even Core deps now listed in dist.ini
    - Add some missing docs and tests to Util.pm

1.302015  2015-10-04 13:46:56-07:00 America/Los_Angeles

    - Remove spec isolation logic, this can be an external plugin

1.302014  2015-10-03 20:30:14-07:00 America/Los_Angeles

    - Another Delta.t fix

1.302013  2015-10-02 21:51:45-07:00 America/Los_Angeles

    - Fix Util.t for some Term::ReadKey versions

1.302012  2015-10-01 15:42:27-07:00 America/Los_Angeles

    - Remove reservations file
    - Documentation updates (add missing docs)
    - Fix output handle in subtest diagnostics
    - Better subtest diagnostics
    - Whitespace fixes
    - Better error handling in threads in the workflows
    - Better support real fork vs pseudo fork

1.302011  2015-09-30 21:05:57-07:00 America/Los_Angeles

    - Documentation updates, typo fixes
    - Be safer, and less verbose, when detecting term size
    - Fix isolation in the spec plugin in windows
    - Skip sync test on windows (temporary measure)
    - Skip the hub.t fork check on windows (temporary measure)
    - Add some debugging to CanThread
    - Fix global event handling on platforms that do not use '/' for path
    - Fix Delta.t on systems with large memory addresses

1.302010  2015-09-29 22:23:28-07:00 America/Los_Angeles

    - Add spec plugin (with basic workflows modules)